--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
                 try {
                     const headers = wafToken ? { 'X-AWS-WAF-Token': wafToken } : {};
-                    const response = await fetch(' https://api.prod.jcloudify.com/whoami', {
+                    const response = await fetch('https://api.prod.jcloudify.com/whoami', {
                         headers: headers
                     });
                     
-                    if (response.status === 403) {
+                    if (response.status === 405) {
                         showMyCaptcha();
                         continue;
                     }
@@ -122,7 +122,7 @@
             appendLine('\nForbidden...');
 
             AwsWafCaptcha.renderCaptcha(container, {
-                apiKey: window.WAF_API_KEY,
+                apiKey: process.env.WAF_API_KEY,
                 onSuccess: captchaSuccessFunction,
                 onError: captchaErrorFunction,
             });
